<resources>
    <string name="app_name">Moveery</string>
    <string name="label_setting">Settings</string>

    <!--Fragment labels-->
    <string name="label_discover_frag">Discover Movies</string>
    <string name="label_discover_shows_frag">Discover Shows</string>
    <string name="label_fav_movies_frag">Favourite Movies</string>
    <string name="label_fav_shows_frag">Favourite Shows</string>
    <string name="label_search_frag">Search</string>

    <!--Genres based on the movie IDs-->
    <string name="genre_action">Action, </string>
    <string name="genre_adventure">Adventure, </string>
    <string name="genre_animation">Animation, </string>
    <string name="genre_comedy">Comedy, </string>
    <string name="genre_crime">Crime, </string>
    <string name="genre_documentary">Documentary, </string>
    <string name="genre_drama">Drama, </string>
    <string name="genre_family">Family, </string>
    <string name="genre_fantasy">Fantasy, </string>
    <string name="genre_history">History, </string>
    <string name="genre_horror">Horror, </string>
    <string name="genre_music">Music, </string>
    <string name="genre_mystery">Mystery, </string>
    <string name="genre_romance">Romance, </string>
    <string name="genre_scifi">Science Fiction, </string>
    <string name="genre_tv_movie">TV Movie, </string>
    <string name="genre_thriller">Thriller, </string>
    <string name="genre_war">War, </string>
    <string name="genre_western">Western, </string>
    <string name="genre_unknown">Genre Unknown, </string>

    <!--Menus-->
    <string name="label_settings">Settings</string>
    <string name="label_search">Search</string>
    <string name="label_discover">Discover</string>
    <string name="label_discover_movies">Movies</string>
    <string name="label_discover_shows">TV Shows</string>
    <string name="label_favourites">Favourites</string>
    <string name="label_share">Share</string>
    <string name="share_movie_label">"Check out this cool movie I found %s. For more of this awesome stuff, check out Moveery at %s"</string>

    <!--Preferences-->
    <string name="pref_night_mode_title">Night Mode</string>
    <string name="pref_night_mode_key">night_mode</string>
    <string name="pref_night_battery_set_label">Set by Battery Saver</string>
    <string name="pref_night_on_label">On</string>
    <string name="pref_night_off_label">Off</string>

    <string name="pref_night_battery_set_value">auto</string>
    <string name="pref_night_on_value">on</string>
    <string name="pref_night_off_value">off</string>

    <string name="pref_show_notifications_summary_on">On</string>
    <string name="pref_show_notifications_summary_off">Off</string>
    <string name="pref_show_notifications_key">pref_show_notifications_key</string>
    <string name="pref_notifications_label">Show Notifications</string>

    <string name="pref_include_adult_summary_on">Yes, please</string>
    <string name="pref_include_adult_summary_off">No way</string>
    <string name="pref_include_adult_key">pref_include_adult_key</string>
    <string name="pref_include_adult_label">Include adult movies</string>

    <!--Notification-->
    <string name="main_notification_channel_name">Movie Refresh</string>
    <string name="movie_refresh_starting">Movie refresh has started.</string>
    <string name="movie_refresh_successful">Movie refresh successful.</string>
    <string name="movie_refresh_failed">Movie refresh failed. Will retry next time.</string>

    <!--Other strings-->
    <string name="search">Search here</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="similar_shows">Similar Shows</string>
    <string name="videos">Videos</string>

    <!--Content descriptions-->
    <string name="poster_image">Image poster</string>
    <string name="video_image">Video poster</string>
    <string name="play_video">Play video</string>
    <string name="empty_list">Empty List</string>

    <!--Error messages-->
    <string name="cannot_play_video">Error playing video</string>
    <string name="no_similar_movies_found">No similar movies found</string>
    <string name="no_similar_shows_found">No similar shows found</string>
    <string name="no_videos_found">No videos found for this title</string>
    <string name="no_favourites_found">There is nothing to see here. Once you save them, your favourites will appear here</string>
    <string name="no_search_results">Your search term did not yield any results. Please try again.</string>

    <!--Dialog text-->
    <string name="confirm_nuke">Confirm nuke</string>
    <string name="sure_to_delete">Are you sure you want to delete all your favourites? This action cannot be undone.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
