<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="@bool/pref_show_notifications_default"
        android:key="@string/pref_show_notifications_key"
        android:summaryOff="@string/pref_show_notifications_summary_off"
        android:summaryOn="@string/pref_show_notifications_summary_on"
        android:title="@string/pref_notifications_label" />

    <ListPreference
        app:defaultValue="@string/pref_night_battery_set_value"
        app:entries="@array/night_mode_labels"
        app:entryValues="@array/night_mode_values"
        app:key="@string/pref_night_mode_key"
        app:title="@string/pref_night_mode_title" />

</PreferenceScreen>