<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/label_discover">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dest_movies_landing_fragment"
                    android:title="@string/label_discover_movies" />
                <item
                    android:id="@+id/dest_shows_landing_fragment"
                    android:title="@string/label_discover_shows" />
            </group>
        </menu>
    </item>

    <item android:title="@string/label_favourites">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dest_movies_favourites_fragment"
                    android:title="@string/label_discover_movies" />
                <item
                    android:id="@+id/dest_shows_favourites_fragment"
                    android:title="@string/label_discover_shows" />
            </group>
        </menu>
    </item>
</menu>